plots trajectory data on semi-circle

--- a/scripts/step02_calculateDegrees/c03_plotdata.ipynb
+++ b/scripts/step02_calculateDegrees/c03_plotdata.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "## Overview\n",
     "This notebook is a step by step to calculate the degrees from semi-circular trajectory data"
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
