--- a/reports/jitter_estimation.ipynb
+++ b/reports/jitter_estimation.ipynb
@@ -114,7 +114,6 @@
      "end_time": "2019-07-19T15:51:27.705771Z",
      "start_time": "2019-07-19T15:51:27.481145Z"
     },
-    "collapsed": false,
     "nbpresent": {
      "id": "0e2e7087-bd8d-4fdc-9f6e-bc106cfddd9a"
     }
@@ -163,8 +162,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-19T15:51:37.995817Z",
      "start_time": "2019-07-19T15:51:29.799164Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -224,8 +222,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-19T15:52:03.054547Z",
      "start_time": "2019-07-19T15:51:54.642624Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -257,41 +254,55 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "66px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
+   "toc_position": {},
    "toc_section_display": "block",
-   "toc_window_display": false,
-   "widenNotebook": false
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
