check video code

--- a/scripts/step00_experimentDev/create_videos/McMaster_vicarious_videos.ipynb
+++ b/scripts/step00_experimentDev/create_videos/McMaster_vicarious_videos.ipynb
@@ -96,8 +96,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T17:39:28.704343Z",
      "start_time": "2019-07-16T17:39:28.401225Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -136,8 +135,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T00:26:23.307069Z",
      "start_time": "2019-07-15T23:09:28.142708Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -622,8 +620,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:37:36.572507Z",
      "start_time": "2019-07-16T21:37:36.460023Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -659,8 +656,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:37:40.224564Z",
      "start_time": "2019-07-16T21:37:40.072815Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -676,8 +672,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:37:44.879069Z",
      "start_time": "2019-07-16T21:37:43.732708Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -751,8 +746,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:37:53.696196Z",
      "start_time": "2019-07-16T21:37:53.359014Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -778,8 +772,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:37:58.713279Z",
      "start_time": "2019-07-16T21:37:56.867161Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -810,8 +803,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:38:26.945412Z",
      "start_time": "2019-07-16T21:38:16.763711Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -871,8 +863,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-07T11:21:31.173460Z",
      "start_time": "2019-08-07T11:21:30.083465Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -889,8 +880,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-30T09:18:13.992566Z",
      "start_time": "2019-07-30T09:18:13.985591Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -951,8 +941,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-17T09:43:01.301961Z",
      "start_time": "2019-07-17T09:43:01.284060Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -976,8 +965,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-17T09:43:03.228327Z",
      "start_time": "2019-07-17T09:43:03.176968Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1006,8 +994,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-17T09:43:06.367815Z",
      "start_time": "2019-07-17T09:43:06.273389Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -2099,8 +2086,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:54:17.127040Z",
      "start_time": "2019-07-16T21:54:17.075248Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2119,8 +2105,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-16T21:54:17.189102Z",
      "start_time": "2019-07-16T21:54:17.153874Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2134,8 +2119,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-17T09:45:53.986645Z",
      "start_time": "2019-07-17T09:45:46.633549Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -2179,8 +2163,7 @@
     "ExecuteTime": {
      "end_time": "2019-07-27T09:49:06.783312Z",
      "start_time": "2019-07-27T09:49:06.678861Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -3006,8 +2989,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-07T16:59:51.522447Z",
      "start_time": "2019-08-07T16:59:51.367002Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -3038,8 +3020,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-07T16:59:52.352227Z",
      "start_time": "2019-08-07T16:59:52.290859Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -3075,8 +3056,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-09T11:28:12.382598Z",
      "start_time": "2019-08-09T11:28:12.330304Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -3090,8 +3070,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-09T11:30:35.593725Z",
      "start_time": "2019-08-09T11:30:34.470268Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -3145,8 +3124,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-09T11:36:54.309813Z",
      "start_time": "2019-08-09T11:36:54.281920Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -3162,8 +3140,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-09T11:37:47.932577Z",
      "start_time": "2019-08-09T11:37:47.842278Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -3190,8 +3167,7 @@
     "ExecuteTime": {
      "end_time": "2019-08-09T11:45:19.600506Z",
      "start_time": "2019-08-09T11:45:19.526215Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -3640,37 +3616,51 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "12px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
     "height": "337px",
@@ -3680,8 +3670,7 @@
     "width": "168px"
    },
    "toc_section_display": "block",
-   "toc_window_display": true,
-   "widenNotebook": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
